fix usage chart baseline projection (#194)
